--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,12 @@
 	<name>storage-spies</name>
 	
 	<properties>
+		<coradata.version>7.2-SNAPSHOT</coradata.version>
 		<storage.version>7.0-SNAPSHOT</storage.version>
 		<logger.version>2.5.0</logger.version>
 		<testutils.version>1.6-SNAPSHOT</testutils.version>
 		<testutils-spies.version>1.0-SNAPSHOT</testutils-spies.version>
+		<testspies.version>1.3-SNAPSHOT</testspies.version>
 	</properties>
 	
 	<scm>
@@ -26,6 +28,12 @@
 	</scm>
 
 	<dependencies>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>coradata</artifactId>
+			<version>${coradata.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>se.uu.ub.cora</groupId>
 			<artifactId>storage</artifactId>
@@ -47,6 +55,11 @@
 			<artifactId>testutils-spies</artifactId>
 			<version>${testutils-spies.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>testspies</artifactId>
+			<version>${testspies.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
