--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,13 @@
 	
 	<properties>
 		<coradata.version>7.2-SNAPSHOT</coradata.version>
+		<coradataspies.version>1.0-SNAPSHOT</coradataspies.version>
+		<json.version>3.3.0</json.version>
 		<storage.version>7.0-SNAPSHOT</storage.version>
 		<logger.version>2.5.0</logger.version>
+		<initialize.version>1.0-SNAPSHOT</initialize.version>
 		<testutils.version>1.6-SNAPSHOT</testutils.version>
 		<testutils-spies.version>1.0-SNAPSHOT</testutils-spies.version>
-		<testspies.version>1.3-SNAPSHOT</testspies.version>
 	</properties>
 	
 	<scm>
@@ -36,6 +38,17 @@
 		</dependency>
 		<dependency>
 			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>coradata-spies</artifactId>
+			<version>${coradataspies.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>json</artifactId>
+			<version>${json.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
 			<artifactId>storage</artifactId>
 			<version>${storage.version}</version>
 			<scope>compile</scope>
@@ -47,6 +60,11 @@
 		</dependency>
 		<dependency>
 			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>initialize</artifactId>
+			<version>${initialize.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
 			<artifactId>testutils</artifactId>
 			<version>${testutils.version}</version>
 		</dependency>
@@ -55,11 +73,6 @@
 			<artifactId>testutils-spies</artifactId>
 			<version>${testutils-spies.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>se.uu.ub.cora</groupId>
-			<artifactId>testspies</artifactId>
-			<version>${testspies.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
