--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<coradata.version>7.5.0</coradata.version>
 		<coradataspies.version>1.3.0</coradataspies.version>
 		<json.version>3.7.0</json.version>
-		<storage.version>7.3.0</storage.version>
+		<storage.version>8.0-SNAPSHOT</storage.version>
 		<logger.version>2.8.0</logger.version>
 		<initialize.version>1.3.0</initialize.version>
 		<testutils.version>1.9.0</testutils.version>
