--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<name>storage-spies</name>
 	
 	<properties>
-		<coradata.version>7.5.0</coradata.version>
+		<coradata.version>7.6-SNAPSHOT</coradata.version>
 		<coradataspies.version>1.3.0</coradataspies.version>
 		<json.version>3.7.0</json.version>
 		<storage.version>8.0-SNAPSHOT</storage.version>
