--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>se.uu.ub.cora</groupId>
@@ -12,8 +12,8 @@
 	<name>storage-spies</name>
 	
 	<properties>
-		<coradata.version>7.6.0</coradata.version>
-		<coradataspies.version>1.4.0</coradataspies.version>
+		<coradata.version>7.7-SNAPSHOT</coradata.version>
+		<coradataspies.version>1.5-SNAPSHOT</coradataspies.version>
 		<json.version>3.7.0</json.version>
 		<storage.version>8.0.0</storage.version>
 		<logger.version>2.8.0</logger.version>
