Add readList with one type

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<coradata.version>9.0.0</coradata.version>
 		<coradataspies.version>1.7.0</coradataspies.version>
 		<json.version>3.10.0</json.version>
-		<storage.version>9.1.0</storage.version>
+		<storage.version>9.2-SNAPSHOT</storage.version>
 		<logger.version>2.10.0</logger.version>
 		<initialize.version>1.6.0</initialize.version>
 		<testutils.version>1.13.0</testutils.version>
