--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
- <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>se.uu.ub.cora</groupId>
 		<artifactId>cora-parent</artifactId>
-		<version>2.6.0</version>
+		<version>2.7.0</version>
 	</parent>
 
 	<artifactId>storage-spies</artifactId>
@@ -15,7 +15,7 @@
 		<coradata.version>10.0.0</coradata.version>
 		<coradataspies.version>2.0.0</coradataspies.version>
 		<json.version>3.10.0</json.version>
-		<storage.version>9.5.0</storage.version>
+		<storage.version>9.6-SNAPSHOT</storage.version>
 		<logger.version>2.10.0</logger.version>
 		<initialize.version>1.6.0</initialize.version>
 		<testutils.version>1.14.0</testutils.version>
